# seqconvnet

./: .gitignore  README.md  pyproject.toml
examples/: preprocess.py  train.py
examples/core/: preprocess.py  rnn_train.py  test.py  testloader.py  trainloader.py  transformer_train.py
examples/train/: preprocess.py  train.py
