[project]
name = "seqconvnet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "seqconvnet-core",
    "seqconvnet-train",
    "seqconvnet-preprocess",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
seqconvnet-core = { workspace = true }
seqconvnet-preprocess = { workspace = true }
seqconvnet-train = { workspace = true }
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }

[tool.hatch.build.targets.wheel]
bypass-selection = true

[[tool.uv.index]]
name = "pytorch-cuda"
# url = "https://download.pytorch.org/whl/cu132"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu124/"
explicit = true

[[tool.uv.index]]
# name = "pypi"
# url = "https://pypi.org/simple"name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
extraPaths = [
    "packages/core/src",
    "packages/preprocess/src",
    "packages/train/src"
]
useLibraryCodeForTypes = true
