[project]
name = "seqconvnet"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "seqconvnet-core",
    "seqconvnet-train",
    "seqconvnet-preprocess",
    "matplotlib>=3.11.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
seqconvnet-core = { workspace = true }
seqconvnet-preprocess = { workspace = true }
seqconvnet-train = { workspace = true }
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
virid-core = { index = "virid" }
virid-std = { index = "virid" }

[tool.hatch.build.targets.wheel]
bypass-selection = true


[[tool.uv.index]]
name = "virid"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[[tool.uv.index]]
name = "pytorch-cuda"
# url = "https://download.pytorch.org/whl/cu132"
url = "https://mirror.sjtu.edu.cn/pytorch-wheels/cu124/"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pyright]
extraPaths = [
    "packages/core/src",
    "packages/preprocess/src",
    "packages/train/src"
]
useLibraryCodeForTypes = true
